@@ -21,6 +21,9 @@ import java.io.IOException;
 import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.io.Writer;
+import java.lang.ref.Reference;
+import java.lang.ref.ReferenceQueue;
+import java.lang.ref.WeakReference;
 import java.nio.charset.StandardCharsets;
 import java.text.DecimalFormat;
 import java.text.NumberFormat;
@@ -30,8 +33,10 @@ import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Properties;
 import java.util.Set;
 import java.util.function.Function;
 import org.teavm.ast.AsyncMethodNode;
@@ -48,13 +53,21 @@ import org.teavm.backend.javascript.codegen.SourceWriter;
 import org.teavm.backend.javascript.codegen.SourceWriterBuilder;
 import org.teavm.backend.javascript.decompile.PreparedClass;
 import org.teavm.backend.javascript.decompile.PreparedMethod;
+import org.teavm.backend.javascript.intrinsics.ref.ReferenceQueueGenerator;
+import org.teavm.backend.javascript.intrinsics.ref.ReferenceQueueTransformer;
+import org.teavm.backend.javascript.intrinsics.ref.WeakReferenceDependencyListener;
+import org.teavm.backend.javascript.intrinsics.ref.WeakReferenceGenerator;
+import org.teavm.backend.javascript.intrinsics.ref.WeakReferenceTransformer;
 import org.teavm.backend.javascript.rendering.Renderer;
 import org.teavm.backend.javascript.rendering.RenderingContext;
+import org.teavm.backend.javascript.rendering.RenderingUtil;
 import org.teavm.backend.javascript.rendering.RuntimeRenderer;
 import org.teavm.backend.javascript.spi.GeneratedBy;
 import org.teavm.backend.javascript.spi.Generator;
 import org.teavm.backend.javascript.spi.InjectedBy;
 import org.teavm.backend.javascript.spi.Injector;
+import org.teavm.backend.javascript.spi.ModuleImporter;
+import org.teavm.backend.javascript.spi.ModuleImporterContext;
 import org.teavm.backend.javascript.spi.VirtualMethodContributor;
 import org.teavm.backend.javascript.spi.VirtualMethodContributorContext;
 import org.teavm.cache.AstCacheEntry;
@@ -68,6 +81,7 @@ import org.teavm.debugging.information.SourceLocation;
 import org.teavm.dependency.AbstractDependencyListener;
 import org.teavm.dependency.DependencyAgent;
 import org.teavm.dependency.DependencyAnalyzer;
+import org.teavm.dependency.DependencyInfo;
 import org.teavm.dependency.DependencyListener;
 import org.teavm.dependency.DependencyType;
 import org.teavm.dependency.MethodDependency;
@@ -83,6 +97,7 @@ import org.teavm.model.ClassReaderSource;
 import org.teavm.model.ElementModifier;
 import org.teavm.model.FieldReference;
 import org.teavm.model.ListableClassHolderSource;
+import org.teavm.model.ListableClassReaderSource;
 import org.teavm.model.MethodHolder;
 import org.teavm.model.MethodReader;
 import org.teavm.model.MethodReference;
@@ -102,7 +117,6 @@ import org.teavm.model.util.AsyncMethodFinder;
 import org.teavm.model.util.ProgramUtils;
 import org.teavm.vm.BuildTarget;
 import org.teavm.vm.RenderingException;
-import org.teavm.vm.TeaVMEntryPoint;
 import org.teavm.vm.TeaVMTarget;
 import org.teavm.vm.TeaVMTargetController;
 import org.teavm.vm.spi.RendererListener;
@@ -121,6 +135,7 @@ public class JavaScriptTarget implements TeaVMTarget, TeaVMJavaScriptHost {
     private final Map<MethodReference, Injector> methodInjectors = new HashMap<>();
     private final List<Function<ProviderContext, Generator>> generatorProviders = new ArrayList<>();
     private final List<Function<ProviderContext, Injector>> injectorProviders = new ArrayList<>();
+    private final List<Function<ProviderContext, ModuleImporter>> moduleImporterProviders = new ArrayList<>();
     private final List<RendererListener> rendererListeners = new ArrayList<>();
     private DebugInformationEmitter debugEmitter;
     private MethodNodeCache astCache = EmptyMethodNodeCache.INSTANCE;
@@ -132,10 +147,14 @@ public class JavaScriptTarget implements TeaVMTarget, TeaVMJavaScriptHost {
     private boolean strict;
     private BoundCheckInsertion boundCheckInsertion = new BoundCheckInsertion();
     private NullCheckInsertion nullCheckInsertion = new NullCheckInsertion(NullCheckFilter.EMPTY);
+    private final Map<String, String> importedModules = new LinkedHashMap<>();
 
     @Override
     public List<ClassHolderTransformer> getTransformers() {
-        return Collections.emptyList();
+        return List.of(
+                new WeakReferenceTransformer(),
+                new ReferenceQueueTransformer()
+        );
     }
 
     @Override
@@ -146,6 +165,16 @@ public class JavaScriptTarget implements TeaVMTarget, TeaVMJavaScriptHost {
     @Override
     public void setController(TeaVMTargetController controller) {
         this.controller = controller;
+
+        var weakRefGenerator = new WeakReferenceGenerator();
+        methodGenerators.put(new MethodReference(WeakReference.class, "<init>", Object.class,
+                ReferenceQueue.class, void.class), weakRefGenerator);
+        methodGenerators.put(new MethodReference(WeakReference.class, "get", Object.class), weakRefGenerator);
+        methodGenerators.put(new MethodReference(WeakReference.class, "clear", void.class), weakRefGenerator);
+
+        var refQueueGenerator = new ReferenceQueueGenerator();
+        methodGenerators.put(new MethodReference(ReferenceQueue.class, "<init>", void.class), refQueueGenerator);
+        methodGenerators.put(new MethodReference(ReferenceQueue.class, "poll", Reference.class), refQueueGenerator);
     }
 
     @Override
@@ -171,6 +200,11 @@ public class JavaScriptTarget implements TeaVMTarget, TeaVMJavaScriptHost {
     @Override
     public void addInjectorProvider(Function<ProviderContext, Injector> provider) {
         injectorProviders.add(provider);
+    }
+
+    @Override
+    public void addModuleImporterProvider(Function<ProviderContext, ModuleImporter> provider) {
+        moduleImporterProviders.add(provider);
     }
 
     /**
@@ -308,6 +342,8 @@ public class JavaScriptTarget implements TeaVMTarget, TeaVMJavaScriptHost {
                 }
             }
         });
+
+        dependencyAnalyzer.addDependencyListener(new WeakReferenceDependencyListener());
     }
 
     public static void includeStackTraceMethods(DependencyAnalyzer dependencyAnalyzer) {
@@ -362,6 +398,7 @@ public class JavaScriptTarget implements TeaVMTarget, TeaVMJavaScriptHost {
 
     private void emit(ListableClassHolderSource classes, Writer writer, BuildTarget target) {
         List<PreparedClass> clsNodes = modelToAst(classes);
+        prepareModules(classes);
         if (controller.wasCancelled()) {
             return;
         }
@@ -378,13 +415,18 @@ public class JavaScriptTarget implements TeaVMTarget, TeaVMJavaScriptHost {
         if (debugEmitterToUse == null) {
             debugEmitterToUse = new DummyDebugInformationEmitter();
         }
-        VirtualMethodContributorContext virtualMethodContributorContext = new VirtualMethodContributorContextImpl(
-                classes);
+        var virtualMethodContributorContext = new VirtualMethodContributorContextImpl(classes);
         RenderingContext renderingContext = new RenderingContext(debugEmitterToUse,
                 controller.getUnprocessedClassSource(), classes,
                 controller.getClassLoader(), controller.getServices(), controller.getProperties(), naming,
                 controller.getDependencyInfo(), m -> isVirtual(virtualMethodContributorContext, m),
-                controller.getClassInitializerInfo(), strict);
+                controller.getClassInitializerInfo(), strict
+        ) {
+            @Override
+            public String importModule(String name) {
+                return JavaScriptTarget.this.importModule(name);
+            }
+        };
         renderingContext.setMinifying(obfuscated);
         Renderer renderer = new Renderer(sourceWriter, asyncMethods, asyncFamilyMethods,
                 controller.getDiagnostics(), renderingContext);
@@ -406,7 +448,7 @@ public class JavaScriptTarget implements TeaVMTarget, TeaVMJavaScriptHost {
             renderer.setDebugEmitter(debugEmitter);
         }
         renderer.getDebugEmitter().setLocationProvider(sourceWriter);
-        for (Map.Entry<MethodReference, Injector> entry : methodInjectors.entrySet()) {
+        for (var entry : methodInjectors.entrySet()) {
             renderingContext.addInjector(entry.getKey(), entry.getValue());
         }
         try {
@@ -439,17 +481,16 @@ public class JavaScriptTarget implements TeaVMTarget, TeaVMJavaScriptHost {
                 runtimeRenderer.renderHandWrittenRuntime("simpleThread.js");
             }
 
-            for (Map.Entry<? extends String, ? extends TeaVMEntryPoint> entry
-                    : controller.getEntryPoints().entrySet()) {
-                sourceWriter.append(entry.getKey()).ws().append("=").ws();
-                MethodReference ref = entry.getValue().getMethod();
+            for (var entry : controller.getEntryPoints().entrySet()) {
+                sourceWriter.append("$rt_exports.").append(entry.getKey()).ws().append("=").ws();
+                var ref = entry.getValue().getMethod();
                 sourceWriter.append("$rt_mainStarter(").appendMethodBody(ref);
                 sourceWriter.append(");").newLine();
-                sourceWriter.append(entry.getKey()).append(".").append("javaException").ws().append("=").ws()
-                        .append("$rt_javaException;").newLine();
+                sourceWriter.append("$rt_exports.").append(entry.getKey()).append(".").append("javaException")
+                        .ws().append("=").ws().append("$rt_javaException;").newLine();
             }
 
-            for (RendererListener listener : rendererListeners) {
+            for (var listener : rendererListeners) {
                 listener.complete();
             }
 
@@ -464,14 +505,58 @@ public class JavaScriptTarget implements TeaVMTarget, TeaVMJavaScriptHost {
 
     private void printWrapperStart(SourceWriter writer) throws IOException {
         writer.append("\"use strict\";").newLine();
-        for (String key : controller.getEntryPoints().keySet()) {
-            writer.append("var ").append(key).append(";").softNewLine();
+        printUmdStart(writer);
+        writer.append("function($rt_globals,").ws().append("$rt_exports");
+        for (var moduleName : importedModules.values()) {
+            writer.append(",").ws().appendFunction(moduleName);
         }
-        writer.append("(function($rt_globals)").ws().append("{").newLine();
+        writer.append(")").appendBlockStart();
+    }
+
+    private String importModule(String name) {
+        return importedModules.get(name);
+    }
+
+    private void printUmdStart(SourceWriter writer) throws IOException {
+        writer.append("(function(root,").ws().append("module)").appendBlockStart();
+        writer.appendIf().append("typeof define").ws().append("===").ws().append("'function'")
+                .ws().append("&&").ws().append("define.amd)").appendBlockStart();
+        writer.append("define(['exports'");
+        for (var moduleName : importedModules.keySet()) {
+            writer.append(',').ws().append('"').append(RenderingUtil.escapeString(moduleName)).append('"');
+        }
+        writer.append("],").ws().append("function(exports");
+        for (var moduleAlias : importedModules.values()) {
+            writer.append(',').ws().appendFunction(moduleAlias);
+        }
+        writer.append(")").ws().appendBlockStart();
+        writer.append("module(root,").ws().append("exports");
+        for (var moduleAlias : importedModules.values()) {
+            writer.append(',').ws().appendFunction(moduleAlias);
+        }
+        writer.append(");").softNewLine();
+        writer.outdent().append("});").softNewLine();
+
+        writer.appendElseIf().append("typeof exports").ws()
+                .append("===").ws().append("'object'").ws().append("&&").ws()
+                .append("typeof exports.nodeName").ws().append("!==").ws().append("'string')").appendBlockStart();
+        writer.append("module(global,").ws().append("exports");
+        for (var moduleName : importedModules.keySet()) {
+            writer.append(',').ws().append("require(\"").append(RenderingUtil.escapeString(moduleName)).append("\")");
+        }
+        writer.append(");").softNewLine();
+
+        writer.appendElse();
+        writer.append("module(root,").ws().append("root);").softNewLine();
+        writer.appendBlockEnd();
+        writer.outdent().append("}(typeof self").ws().append("!==").ws().append("'undefined'")
+                .ws().append("?").ws().append("self")
+                .ws().append(":").ws().append("this,")
+                .ws();
     }
 
     private void printWrapperEnd(SourceWriter writer) throws IOException {
-        writer.append("})(this);").newLine();
+        writer.outdent().append("}));").newLine();
     }
 
     private void printStats(Renderer renderer, int totalSize) {
@@ -500,6 +585,28 @@ public class JavaScriptTarget implements TeaVMTarget, TeaVMJavaScriptHost {
 
     private String getSizeWithPercentage(int size, int totalSize) {
         return STATS_NUM_FORMAT.format(size) + " (" + STATS_PERCENT_FORMAT.format((double) size / totalSize) + ")";
+    }
+
+    private void prepareModules(ListableClassHolderSource classes) {
+        var context = new ImporterContext(classes);
+        for (var className : classes.getClassNames()) {
+            var cls = classes.get(className);
+            for (var method : cls.getMethods()) {
+                if (method.getModifiers().contains(ElementModifier.ABSTRACT)) {
+                    continue;
+                }
+
+                var providerContext = new ProviderContextImpl(method.getReference());
+                for (var provider : moduleImporterProviders) {
+                    var importer = provider.apply(providerContext);
+                    if (importer != null) {
+                        context.method = method;
+                        importer.importModules(context);
+                        context.method = null;
+                    }
+                }
+            }
+        }
     }
 
     private List<PreparedClass> modelToAst(ListableClassHolderSource classes) {
@@ -659,7 +766,7 @@ public class JavaScriptTarget implements TeaVMTarget, TeaVMJavaScriptHost {
 
         boolean found = false;
         ProviderContext context = new ProviderContextImpl(method.getReference());
-        for (Function<ProviderContext, Generator> provider : generatorProviders) {
+        for (var provider : generatorProviders) {
             Generator generator = provider.apply(context);
             if (generator != null) {
                 methodGenerators.put(method.getReference(), generator);
@@ -667,7 +774,7 @@ public class JavaScriptTarget implements TeaVMTarget, TeaVMJavaScriptHost {
                 break;
             }
         }
-        for (Function<ProviderContext, Injector> provider : injectorProviders) {
+        for (var provider : injectorProviders) {
             Injector injector = provider.apply(context);
             if (injector != null) {
                 methodInjectors.put(method.getReference(), injector);
@@ -739,6 +846,11 @@ public class JavaScriptTarget implements TeaVMTarget, TeaVMJavaScriptHost {
         public ClassReaderSource getClassSource() {
             return controller.getUnprocessedClassSource();
         }
+
+        @Override
+        public <T> T getService(Class<T> type) {
+            return controller.getServices().getService(type);
+        }
     }
 
     @PlatformMarker
@@ -801,6 +913,50 @@ public class JavaScriptTarget implements TeaVMTarget, TeaVMJavaScriptHost {
         @Override
         public ClassReaderSource getClassSource() {
             return classSource;
+        }
+    }
+
+    class ImporterContext implements ModuleImporterContext {
+        private ListableClassReaderSource classSource;
+        MethodReader method;
+
+        ImporterContext(ListableClassReaderSource classSource) {
+            this.classSource = classSource;
+        }
+
+        @Override
+        public MethodReader getMethod() {
+            return method;
+        }
+
+        @Override
+        public void importModule(String name) {
+            importedModules.computeIfAbsent(name, n -> "$rt_import_" + importedModules.size());
+        }
+
+        @Override
+        public ListableClassReaderSource getClassSource() {
+            return classSource;
+        }
+
+        @Override
+        public ClassLoader getClassLoader() {
+            return controller.getClassLoader();
+        }
+
+        @Override
+        public Properties getProperties() {
+            return JavaScriptTarget.this.controller.getProperties();
+        }
+
+        @Override
+        public DependencyInfo getDependency() {
+            return controller.getDependencyInfo();
+        }
+
+        @Override
+        public <T> T getService(Class<T> type) {
+            return controller.getServices().getService(type);
         }
     }
 }
